<resources>
    <string name="app_name">IRCTC Made Easy</string>
    <string name="error_title">Unable to connect Internet</string>
    <string name="error_description">Please make sure of network state、and try again.</string>
    <string name="reload_message">reload</string>

    <string name="saved_cards_label">Saved Cards :</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="net_banking">Net Banking</string>
    <string name="credit_card">Payment Gateway/Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="cash_card">Cash Card/Wallets</string>
    <string name="irct_prepaid">IRCTC Prepaid</string>

    <string name="payment_options">Payment Options :</string>
    <string name="internet_banking_text">Internet Banking</string>
    <string name="card_type_text">Card Type :</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="year_text">Year</string>
    <string name="cvv_text">CVV</string>
    <string name="atm_pin_text">ATM PIN</string>
    <string name="saved_card_text">Save Card : </string>
    <string name="specify_name_save">Specify name to save</string>

    <string name="add_passenger_text">Passenger Details</string>
    <string name="add_passenger_name">Passenger Name</string>
    <string name="add_passenger_age"> Age</string>
    <string name="add_gender_text">Gender : </string>
    <string name="add_passenger_male">MALE</string>
    <string name="add_passenger_female">FEMALE</string>
    <string name="add_passenger_berth_text">Berth : </string>
    <string name="add_passenger_food_text">Food : </string>
    <string name="add_passenger_child_text">Child</string>
    <string name="add_passenger_senior_text">Senior</string>
    <string name="add_passenger_bed_roll_text">Bed Roll</string>
    <string name="add_passenger_opt_berth_text">Opt Berth</string>

    <string name="view_passenger_edit_text">Edit</string>
    <string name="view_passenger_delete_text">Delete</string>
    <string name="view_book_now_text">Book Now</string>

    <string name="login_detail_text">Login Details</string>
    <string name="login_save_text">Save Login</string>
    <string name="train_details_text">Train Details</string>
    <string name="station_search_source">Search Source</string>
    <string name="station_search_destination">Search Destination</string>
    <string name="station_search_boarding">Search Boarding</string>
    <string name="date_journey_text">  dd-mm-yyyy</string>
    <string name="type_train_number">Type Train Number</string>
    <string name="train_class">Class : </string>
    <string name="set_journey_date">Set Journey Date</string>
    <string name="quota_text">Quota : </string>
    <string name="quota_ladies">LADIES</string>
    <string name="quota_handicapped">PHYSICALLY HANDICAPPED</string>
    <string name="quota_tatkal">TATKAL</string>
    <string name="quota_premium_tatkal">PREMIUM TATKAL</string>
    <string name="quota_general">GENERAL</string>
    <string name="booking_option_text">Booking Options</string>
    <string name="book_prefer_coach_text">Preferred Coach : </string>
    <string name="prefer_coach_id">Coach ID</string>
    <string name="book_auto_upgrade">Consider for Auto Upgradation</string>
    <string name="book_confirm_tickets">Book only if confirm berths are allotted</string>
    <string name="book_confirm_none">None</string>
    <string name="book_same_coach">Book , only if all berths are allotted in same coach</string>
    <string name="book_one_lower_alloted">Book, only if at least 1 lower berth is allotted</string>
    <string name="book_two_lower_alloted"> Book, only if 2 lower berths are allotted.</string>

    <string name="CompanyName">Factor Labs</string>

    <string name="payment_detail_text">Payment Details</string>
    <string name="card_detail_text">Card Details</string>
    <string name="book_now_text">Book Now</string>
    <string name="save_for_later">Save For Later</string>
    <string name="book_tickets_now_text">Book Tickets Now</string>

    <string name="password_text">Password</string>
    <string name="username_text">Username</string>

    <string name="train_class_prompt">Select a class</string>
    <string-array name="train_class">
        <item>SL</item>
        <item>3A</item>
        <item>1A</item>
        <item>2A</item>
        <item>FC</item>
        <item>3E</item>
        <item>CC</item>
        <item>EC</item>
        <item>2S</item>
    </string-array>

    <string-array name="passenger_food">
        <item>NotSet</item>
        <item>Veg</item>
        <item>NonVeg</item>
    </string-array>

    <string-array name="passenger_berth">
        <item>No Preference</item>
        <item>Lower</item>
        <item>Middle</item>
        <item>Upper</item>
        <item>Side Upper</item>
        <item>Side Lower</item>
        <item>Window Seat</item>
    </string-array>

    <string-array name="net_banking_options">
        <item>Not Set</item>
        <item>State Bank of India</item>
        <item>State Bank of India and Associates</item>
        <item>Federal Bank</item>
        <item>Indian Bank</item>
        <item>Union Bank of India</item>
        <item>Andhra Bank</item>
        <item>Punjab National Bank</item>
        <item>Allahabad Bank</item>
        <item>Vijaya Bank</item>
        <item>AXIS Bank</item>
        <item>HDFC Bank</item>
        <item>Bank of Baroda</item>
        <item>Karnataka Bank</item>
        <item>Oriental Bank of Commerce</item>
        <item>Karur Vysya Bank</item>
        <item>Kotak Mahindra Bank</item>
        <item>ICICI Bank</item>
        <item>IndusInd Bank</item>
        <item>Central Bank of India</item>
        <item>Bank of India</item>
        <item>Syndicate Bank</item>
        <item>Bank of Maharashatra</item>
        <item>IDBI Bank</item>
        <item>Corporation Bank</item>
        <item>Yes Bank</item>
        <item>Nepal SBI Bank Ltd.</item>
        <item>South Indian Bank</item>
    </string-array>

    <string-array name="credit_card_options">
        <item>Not Set</item>
        <item>Visa/Master Card(Powered By ICICI BANK)</item>
        <item>Visa/Master Card(Powered By CITI BANK)</item>
        <item>Visa/Master Card(Powered By HDFC BANK)</item>
        <item>American Express</item>
        <item>Visa/Master Card(Powered By AXIS BANK)</item>
        <item>RuPay Card (Powered by Kotak Bank)</item>
        <item>International cards (Powered by ATOM)</item>
    </string-array>

    <string-array name="debit_card_options">
        <item>Not Set</item>
        <item>State Bank of India</item>
        <item>Indian Overseas Bank</item>
        <item>Punjab National Bank</item>
        <item>Indian Bank</item>
        <item>Union Bank of India</item>
        <item>Bank of India</item>
        <item>Andhra Bank</item>
        <item>Canara Bank</item>
        <item>CITI Bank</item>
        <item>ICICI Bank</item>
        <item>HDFC Bank</item>
        <item>AXIS Bank</item>
    </string-array>

    <string-array name="cash_cards_option">
        <item>Not Set</item>
        <item>ITZ Cash Card</item>
        <item>I Cash Card</item>
        <item>OXI Cash Card</item>
        <item>Mobikwik Wallet</item>
        <item>mRUPEE Wallet</item>
        <item>Paytm Wallet</item>
    </string-array>

    <string-array name="irctc_card_option">
        <item>Not Set</item>
        <item>IRCTC Union Bank prepaid (RuPay)</item>
    </string-array>

    <string-array name="months_calendar">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string-array name="cards_type">
        <item>VISA</item>
        <item>MASTER</item>
    </string-array>

    <string name="form_entry_text">Welcome</string>
</resources>
