<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_passenger_page">

            <TextView
                android:id="@+id/lbl_view_passenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_passenger_text"
                android:gravity="center"
                android:textStyle="bold|normal"
                android:textSize="@dimen/header_text_size"
                android:typeface="serif"
                android:layout_gravity="center" />

            <com.rey.material.widget.EditText
                android:id="@+id/txt_passenger_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_passenger_name"
                android:padding="@dimen/padding_two"/>
            <com.rey.material.widget.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_passenger_age"
                android:padding="@dimen/padding_two"
                android:inputType="number"
                android:id="@+id/txt_passenger_age" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_two">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_gender_text"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:textStyle="bold|normal"
                    android:textSize="@dimen/header_text_size" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.rey.material.widget.RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_radio_male"
                        android:text="@string/add_passenger_male"
                        android:padding="@dimen/padding_two"
                        android:checked="true"
                        android:gravity="center" />
                    <com.rey.material.widget.RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_radio_female"
                        android:layout_toEndOf="@id/id_radio_gn"
                        android:padding="@dimen/padding_two"
                        android:gravity="center"
                        android:text="@string/add_passenger_male"/>

                </com.google.android.flexbox.FlexboxLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_view_height"
                android:orientation="horizontal">
                <com.rey.material.widget.TextView
                    android:layout_width="@dimen/heading_width_size"
                    android:layout_height="match_parent"
                    android:text="@string/add_passenger_berth_text"
                    android:padding="@dimen/padding_five"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:textStyle="bold|normal" />
                <com.rey.material.widget.Spinner
                    android:id="@+id/spinner_berth"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    custom:rd_style="@style/Material.Drawable.Ripple.Wave"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_view_height"
                android:orientation="horizontal">
                <com.rey.material.widget.TextView
                    android:layout_width="@dimen/heading_width_size"
                    android:layout_height="match_parent"
                    android:text="@string/add_passenger_food_text"
                    android:padding="@dimen/padding_five"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:textStyle="bold|normal" />
                <com.rey.material.widget.Spinner
                    android:id="@+id/spinner_food"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:rd_style="@style/Material.Drawable.Ripple.Wave"
                    android:gravity="center|start"
                    android:layout_gravity="center" />
            </LinearLayout>

            <com.rey.material.widget.CheckBox
                android:id="@+id/check_box_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_passenger_child_text"
                android:gravity="center|start"
                android:enabled="false"
                android:padding="@dimen/padding_two"/>
            <com.rey.material.widget.CheckBox
                android:id="@+id/check_box_senior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_passenger_senior_text"
                android:gravity="center|start"
                android:enabled="false"
                android:padding="@dimen/padding_two"/>
            <com.rey.material.widget.CheckBox
                android:id="@+id/check_box_bed_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_passenger_bed_roll_text"
                android:enabled="true"
                android:padding="@dimen/padding_two"
                android:gravity="center|start"/>
            <com.rey.material.widget.CheckBox
                android:id="@+id/check_box_opt_berth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_passenger_opt_berth_text"
                android:enabled="false"
                android:padding="@dimen/padding_two"
                android:checked="true"
                android:gravity="center|start"/>
        </LinearLayout>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_save_passenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/padding_eight"
            android:layout_marginRight="@dimen/padding_eight"
            android:src="@drawable/ic_calendar_white_24dp"
            custom:fab_colorNormal="@color/colorAccent"
            custom:fab_colorPressed="@color/colorPrimary"
            custom:fab_colorRipple="@color/colorPrimaryDark"
            custom:fab_shadowRadius="@dimen/padding_four"
            custom:fab_shadowXOffset="@dimen/padding_one"
            custom:fab_shadowYOffset="@dimen/padding_three"
            custom:fab_size="normal"
            custom:fab_showAnimation="@anim/fab_scale_up"
            custom:fab_hideAnimation="@anim/fab_scale_down"
            custom:fab_progress_indeterminate="false"
            custom:fab_progress_max="100"
            custom:fab_progress="0"
            android:visibility="visible"/>
    </LinearLayout>
</ScrollView>