<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/shadow"
    android:orientation="vertical"
    android:layout_marginBottom="30dp"
    android:padding="20dp"
    android:id="@+id/row_forms_info">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section_form_info"
        android:padding="@dimen/padding_three">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rey.material.widget.TextView
                android:id="@+id/txt_source_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/train24"
                android:drawablePadding="10dp"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@android:color/black"
                android:text=""/>
            <com.rey.material.widget.TextView
                android:id="@+id/txt_journey_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@android:color/black"
                android:text=""
                android:visibility="gone" />
            <com.rey.material.widget.TextView
                android:id="@+id/txt_total_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@android:color/black"
                android:text=""
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_form_info">
        <com.rey.material.widget.Button
            android:id="@+id/btn_form_edit_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:text="@string/view_passenger_edit_text"
            android:drawableLeft="@drawable/edit_user24"
            android:paddingRight="10dp" />
        <com.rey.material.widget.Button
        android:id="@+id/btn_form_delete_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:text="@string/view_passenger_delete_text"
            android:drawableLeft="@drawable/delete24"
            android:paddingRight="10dp"/>
        <com.rey.material.widget.Button
            android:id="@+id/btn_book_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="12sp"
            android:textColor="@android:color/black"

            android:text="@string/view_book_now_text"
            android:drawableLeft="@drawable/booking24"
            android:paddingRight="10dp"/>
    </LinearLayout>
</RelativeLayout>